# VpnConnect

./: .gitignore  README.md  app.py  config.py  home.py  main.py  pyproject.toml  setup.py  styles.css
scripts/: install.sh
src/connect_vpn/: app.py  config.py  home.py  main.py  setup.py  splash.py  styles.css
src/connect_vpn/vpn/: connect.py  setup.py
vpn/: connect.py  setup.py
